--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index/css/index.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=GFS+Neohellenic&family=Maven+Pro&family=Sen:wght@400;700&display=swap" rel="stylesheet">
-    <title>Options</title>
+    <title>School</title>
 </head>
 <body>
     <section>
@@ -27,11 +27,11 @@
                     <i class="fa-solid fa-file-signature"></i>
                     <a href="#">Contrats</a>
                 </div>
-                <div>
+                <div class="course-link">
                     <i class="fa-solid fa-book"></i>
                     <a href="#">Cours</a>
                 </div>
-                <div class="options">
+                <div>
                     <i class="fa-solid fa-filter"></i>
                     <a href="#">Options</a>
                 </div>
@@ -59,7 +59,7 @@
                                 <i class="fa-solid fa-gauge"></i>
                                 <a href="#">Dashboard</a>
                             </div>
-                            <div class="school">
+                            <div >
                                 <i class="fa-solid fa-school-flag"></i>
                                 <a href="#">Schools</a>
                             </div>
@@ -67,7 +67,7 @@
                                 <i class="fa-solid fa-file-signature"></i>
                                 <a href="#">Contrats</a>
                             </div>
-                            <div>
+                            <div class="course-link">
                                 <i class="fa-solid fa-book"></i>
                                 <a href="#">Cours</a>
                             </div>
@@ -91,139 +91,163 @@
                         </div>    
                     </div>
                 </div>
-                <div class="add-school">
+                <div class="add-course">
                     <i class="fa-solid fa-circle-plus"></i>
-                    <a href="Add/index.html">Ajouter une option</a>
+                    <a href="add/add.html">Ajouter un cours</a>
                 </div>
             </div>
-            <div class="ecole-enregistree">
+            <div class="cours-enregistree">
                 <div class="first-item">
-                    <h3>LISTES DE TOUTES LES OPTIONS</h3>
+                    <h3>LISTE DES COURS ENREGISTREES</h3>
+                    <div class="filtre">
+                        <select name="niveau" id="niveau">
+                            <option value="">Selectionner le niveau</option>
+                            <option value="7ème">7ème</option>
+                            <option value="8ème">8ème</option>
+                            <option value="1ère">1ère</option>
+                            <option value="2ème">2ème</option>
+                            <option value="3ème">3ème</option>
+                            <option value="4ème">4ème</option>
+                        </select>
+                        <select name="niveau" id="niveau">
+                            <option value="">Selectionner l'option</option>
+                            <option value="Commercial et gestion">Commercial et gestion</option>
+                            <option value="Mecanique generale">Mecanique generale</option>
+                            <option value="Technique sociale">Technique sociale</option>
+                            <option value="Biologie chimie">Biologie chimie</option>
+                            <option value="Nutrition">Nutrition</option>
+
+                        </select>
+                        <button>Rechercher</button>
+                    </div>
                 </div>
                 <div class="second-item">
                     <div class="allitems">
-                        <div class="ecole">
-                             <a href="show/index.html">1. Commercial et Gestion</a>
-                            <div>
-                                <div>
-                                    <a href="##">Supprimer</a>
-                                    <h2></h2>
-                                </div>
-                                <div>
-                                    <a href="Edit/index.html">Modifier</a>
-                                </div>
-                            </div>
-                        </div>  
-                    </div>
-                    <div class="allitems">
-                        <div class="ecole">
-                            <a href="show/index.html">2. Commercial et Gestion</a>
+                        <div class="cours">
+                            <a href="show/show.html">01. Comptabilité analytique de gestion</a>
                             <div>
                                 <div>
                                     <a href="#">Supprimer</a>
                                     <h2></h2>
                                 </div>
                                 <div>
-                                    <a href="Edit/index.html">Modifier</a>
+                                    <a href="edit/edit.html">Modifier</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="allitems">
-                        <div class="ecole">
-                            <a href="show/index.html">3. Commercial et Gestion</a>
+                        <div class="cours">
+                            <a href="show/show.html">02. Comptabilité analytique de gestion</a>
                             <div>
                                 <div>
                                     <a href="#">Supprimer</a>
                                     <h2></h2>
                                 </div>
                                 <div>
-                                    <a href="Edit/index.html">Modifier</a>
+                                    <a href="edit/edit.html">Modifier</a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="allitems">
-                    <div class="ecole">
-                        <a href="show/index.html">4. Commercial et Gestion</a>
-                        <div>
+                    <div class="allitems">
+                        <div class="cours">
+                            <a href="show/show.html">03. Comptabilité analytique de gestion</a>
                             <div>
-                                <a href="#">Supprimer</a>
-                            </div>
-                            <div>
-                                <h2></h2>
-                            </div>
-                            <div>
-                                <a href="Edit/index.html">Modifier</a>
+                                <div>
+                                    <a href="#">Supprimer</a>
+                                    <h2></h2>
+                                </div>
+                                <div>
+                                    <a href="edit/edit.html">Modifier</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="allitems">
-                    <div class="ecole">
-                        <a href="show/index.html">5. Commercial et Gestion</a>
-                        <div>
+                    <div class="allitems">
+                        <div class="cours">
+                            <a href="show/show.html">04. Comptabilité analytique de gestion</a>
                             <div>
-                                <a href="#">Supprimer</a>
-                            </div>
-                            <div>
-                                <h2></h2>
-                            </div>
-                            <div>
-                                <a href="Edit/index.html">Modifier</a>
+                                <div>
+                                    <a href="#">Supprimer</a>
+                                    <h2></h2>
+                                </div>
+                                <div>
+                                    <a href="edit/edit.html">Modifier</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="allitems">
-                    <div class="ecole">
-                        <a href="show/index.html">6. Commercial et Gestion</a>
-                        <div>
+                    <div class="allitems">
+                        <div class="cours">
+                            <a href="show/show.html">05. Comptabilité analytique de gestion</a>
                             <div>
-                                <a href="#">Supprimer</a>
-                            </div>
-                            <div>
-                                <h2></h2>
-                            </div>
-                            <div>
-                                <a href="Edit/index.html">Modifier</a>
+                                <div>
+                                    <a href="#">Supprimer</a>
+                                    <h2></h2>
+                                </div>
+                                <div>
+                                    <a href="edit/edit.html">Modifier</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="allitems">
-                    <div class="ecole">
-                        <a href="show/index.html">7. Commercial et Gestion</a>
-                        <div>
+                    <div class="allitems">
+                        <div class="cours">
+                            <a href="show/show.html">06. Comptabilité analytique de gestion</a>
                             <div>
-                                <a href="#">Supprimer</a>
-                            </div>
-                            <div>
-                                <h2></h2>
-                            </div>
-                            <div>
-                                <a href="Edit/index.html">Modifier</a>
+                                <div>
+                                    <a href="#">Supprimer</a>
+                                    <h2></h2>
+                                </div>
+                                <div>
+                                    <a href="edit/edit.html">Modifier</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="allitems">
-                    <div class="ecole">
-                        <a href="show/index.html">8. Commercial et Gestion</a>
-                        <div>
+                    <div class="allitems">
+                        <div class="cours">
+                            <a href="show/show.html">07. Comptabilité analytique de gestion</a>
                             <div>
-                                <a href="#">Supprimer</a>
-                            </div>
-                            <div>
-                                <h2></h2>
-                            </div>
-                            <div>
-                                <a href="Edit/index.html">Modifier</a>
+                                <div>
+                                    <a href="#">Supprimer</a>
+                                    <h2></h2>
+                                </div>
+                                <div>
+                                    <a href="edit/edit.html">Modifier</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                    <div class="allitems">
+                        <div class="cours">
+                            <a href="show/show.html">08. Comptabilité analytique de gestion</a>
+                            <div>
+                                <div>
+                                    <a href="#">Supprimer</a>
+                                    <h2></h2>
+                                </div>
+                                <div>
+                                    <a href="edit/edit.html">Modifier</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="allitems">
+                        <div class="cours">
+                            <a href="show/show.html">09. Comptabilité analytique de gestion</a>
+                            <div>
+                                <div>
+                                    <a href="#">Supprimer</a>
+                                    <h2></h2>
+                                </div>
+                                <div>
+                                    <a href="edit/edit.html">Modifier</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 <button class="voir-plus">
                     <i class="fa-solid fa-circle-plus"></i>
                     <a href="#">Voir plus</a>
