add this to my github 2

--- a/Add/add.html
+++ b/Add/add.html
@@ -10,7 +10,7 @@
     <script src="js/highcharts.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=GFS+Neohellenic&family=Maven+Pro&family=Sen:wght@400;700&display=swap" rel="stylesheet">
 
-    <title>Interface SuperAdmin NTech</title>
+    <title>Add</title>
 </head>
 <body>
     <div class="bloc_central">
