add this to my github 2

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
                 <div class="add-course">
                     <i class="fa-solid fa-circle-plus"></i>
-                    <a href="add/add.html">Ajouter un cours</a>
+                    <a href="add/index/">Ajouter un cours</a>
                 </div>
             </div>
             <div class="cours-enregistree">
@@ -124,14 +124,14 @@
                 <div class="second-item">
                     <div class="allitems">
                         <div class="cours">
-                            <a href="show/show.html">01. Comptabilité analytique de gestion</a>
+                            <a href="show/index.html">01. Comptabilité analytique de gestion</a>
                             <div>
                                 <div>
                                     <a href="#">Supprimer</a>
                                     <h2></h2>
                                 </div>
                                 <div>
-                                    <a href="edit/edit.html">Modifier</a>
+                                    <a href="edit/index.html">Modifier</a>
                                 </div>
                             </div>
                         </div>
